--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Hola</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Escritorio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+
+<body>
+        <div>
+        <div class="eme"></div>
+        <div class="i"></div>
+        <div class="s"></div>
+    </div>
+</body>
+
+
+</html>
