--- a/index.html
+++ b/index.html
@@ -10,19 +10,14 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<!--body class="bg-image"-->
-    <body style="background: url('fondo-morado.jpg') 50% no-repeat fixed; background-size: cover;">
-
-    <div class="container-fluid">
-        <div class="row row-cols-1">
-                <div id="papelera-bg" class="col col-12 mb-3">
-                    <img class="icon" src="papelera-azul.png" id="papelera">
-                </div>
+<body>
+    <div>
+        <div id="papelera-bg">
+            <img class="icon" src="papelera-azul.png" id="papelera">
+        </div>
             
-                <div id="arcade-bg" class="col col-12">
-                    <img class="icon" src="arcade-azul.png" id="arcade">
-                </div>
-            </div>
+        <div id="arcade-bg">
+            <img  src="arcade-azul.png" id="arcade">
         </div>
     </div>
     
