ventana con juego

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     <div class="nav-item dropdown dropup" id="home">
                         <a class="nav-link " data-bs-toggle="dropdown" id="home"><img src="Iconos/home-alt-2-regular-24.png"></a>
                         <div class="dropdown-menu" id="submenu">
-                            <a class="dropdown-item" id="li">Perfil</a>
+                            <a class="dropdown-item" id="li"><img src="Iconos/usuario.png">  Perfil</a>
                             <a class="dropdown-item" id="li"><img src="Iconos/cog-regular-24.png">    Configuración</a>
+                            <a class="dropdown-item" id="li"><img src="Iconos/paleta-de-color.png">    Tema</a>
                             <a class="dropdown-item" id="li"><img src="Iconos/file-regular-24.png">    Archivos</a>
                             <a class="dropdown-item" id="li"><img src="Iconos/power-off-regular-24.png">    Apagar</a>
                         </div>
@@ -114,6 +115,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
     </script>
+    <script src="https://riversun.github.io/jsframe/jsframe.js"></script>
     <script src="Escritorio.js"></script>
 </body>
 
