--- a/part10.html
+++ b/part10.html
@@ -70,7 +70,8 @@ function create ()
 
 
     platforms.create(100, 300, 'ground');
-    platforms.create(600, 530, 'ground');
+    platforms.create(600, 520, 'ground');
+    platforms.create(700, 330, 'ground')
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
 
@@ -105,7 +106,7 @@ function create ()
     //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
     stars = this.physics.add.group({
         key: 'ball-tlb',
-        repeat: 11,
+        repeat: 10,
         setXY: { x: 12, y: 0, stepX: 70 }
     });
 
@@ -119,7 +120,7 @@ function create ()
     bombs = this.physics.add.group();
 
     //  The score
-    scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+    scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#ffff' });
 
     //  Collide the player and the stars with the platforms
     this.physics.add.collider(player, platforms);
@@ -160,7 +161,7 @@ function update ()
 
     if (cursors.up.isDown && player.body.touching.down)
     {
-        player.setVelocityY(-330);
+        player.setVelocityY(-380);
     }
 }
 
