juego con pantalla movible

--- a/part10.html
+++ b/part10.html
@@ -175,7 +175,7 @@ function update ()
         player.setVelocityY(-380);
     }
 
-    
+    this.cameras.main.scrollX = player.x - 400;
 }
 
 function collectStar (player, star)
