--- a/part10.html
+++ b/part10.html
@@ -16,8 +16,8 @@
 
 var config = {
     type: Phaser.AUTO,
-    width: 800,
-    height: 600,
+    width: 4000,
+    height: 2000,
     physics: {
         default: 'arcade',
         arcade: {
@@ -45,8 +45,9 @@ var game = new Phaser.Game(config);
 
 function preload ()
 {
-    this.load.image('space3', 'assets/space3.png');
+    this.load.image('ciudad', 'assets/ciudad10.png');
     this.load.image('ground', 'assets/platform1.png');
+    this.load.image('ground3', 'assets/platform3.png');
     this.load.image('ball-tlb', 'assets/ball-tlb.png');
     this.load.image('bomb', 'assets/bomb.png');
     this.load.image('tree1', 'assets/tree1.png');
@@ -56,22 +57,37 @@ function preload ()
 function create ()
 {
     //  A simple background for our game
-    this.add.image(400, 300, 'space3');
+    this.add.image(1300, 340, 'ciudad');
     this.add.image(390, 330, 'tree1');
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = this.physics.add.staticGroup();
 
     //  Here we create the ground.
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
+    platforms.create(200, 568, 'ground3').setScale(2).refreshBody();
     platforms.create(200, 568, 'ground').setScale(2).refreshBody();
-
+    platforms.create(700, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(1200, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(1700, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(2200, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(2700, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(3200, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(3700, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(4200, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(200, 568, 'ground3').setScale(2).refreshBody();
     //  Now let's create some ledges
     
 
 
-    platforms.create(100, 300, 'ground');
-    platforms.create(600, 520, 'ground');
-    platforms.create(700, 330, 'ground')
+    platforms.create(200, 200, 'ground');
+    platforms.create(800, 250, 'ground');
+    platforms.create(1100, 200, 'ground');
+    platforms.create(1700, 340, 'ground');
+    platforms.create(2000, 250, 'ground');
+    platforms.create(2300, 200, 'ground');
+    platforms.create(2800, 300, 'ground');
+    platforms.create(3100, 350, 'ground');
+
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
 
@@ -106,7 +122,7 @@ function create ()
     //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
     stars = this.physics.add.group({
         key: 'ball-tlb',
-        repeat: 10,
+        repeat: 120,
         setXY: { x: 12, y: 0, stepX: 70 }
     });
 
@@ -140,10 +156,10 @@ function update ()
         return;
     }
 
-    if (cursors.down.isDown)
+    if (cursors.up.isDown)
     {
-        player.setVelocityY(-380);
-        player.anims.play('down', true)
+        player.setVelocityY(-300);
+        player.anims.play('up', false)
     }
 
     if (cursors.left.isDown)
@@ -170,10 +186,7 @@ function update ()
         player.anims.play('turn');
     }
 
-    if (cursors.up.isDown && player.body.touching.down)
-    {
-        player.setVelocityY(-380);
-    }
+    
 
     this.cameras.main.scrollX = player.x - 400;
 }
