--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div id="arcade-bg">
             <img  src="fondo/arcade-azul.png" id="arcade">
         </div>
+
+        <div id="notas-bg">
+            <img class="icon" src="iconos/bloc.png" id="notas">
+        </div>
     </div>
     
     <nav class="navbar fixed-bottom navbar-expand-lg" id="barra">
