--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
         </div>
 
         <div id="notas-bg">
-            <img class="icon" src="iconos/bloc.png" id="notas">
+            <img class="icon" src="fondo/bloc.png" id="notas">
         </div>
+
+        <div id="excel-bg">
+            <img class="icon" src="fondo/excel.png" id="excel">
+        </div>
+
     </div>
     
     <nav class="navbar fixed-bottom navbar-expand-lg" id="barra">
