--- a/quill.html
+++ b/quill.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
         body {
-            background-color: #fff; /* Fondo blanco */
+            background-color: rgb(218, 197, 197); /* Fondo blanco */
         }
     </style>
 </head>
@@ -14,8 +14,8 @@
 
 <!-- Create the editor container -->
 <div id="editor">
-    <p>Hello World!</p>
-    <p>Some initial <strong>bold</strong> text</p>
+    <p>Bienvenidos a nuestra pagina web</p>
+    
     <p><br></p>
 </div>
 
@@ -27,10 +27,10 @@
     var quill = new Quill('#editor', {
         theme: 'snow'
     });
+    var editor = new Quill('.editor');  // First matching element will be used
+
 </script>
+
 
 </body>
 </html>
-
-
-
