--- a/excel.html
+++ b/excel.html
@@ -9,45 +9,13 @@
 </head>
 <body onload="load()">
   <div style="position: fixed; right: 0; top: .3em;">
-  <iframe src="https://ghbtns.com/github-btn.html?user=myliang&repo=x-spreadsheet&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
   </div>
   <div id="x-spreadsheet-demo"></div>
   <script>
     function load(){
       const rows10 = { len: 1000 };
-      for (let i = 0; i < 1000; i += 1) {
-        rows10[i] = {
-          cells: {
-            0: { text: 'A-' + i },
-            1: { text: 'B-' + i },
-            2: { text: 'C-' + i },
-            3: { text: 'D-' + i },
-            4: { text: 'E-' + i },
-            5: { text: 'F-' + i },
-          }
-        };
-      }
-      const rows = {
-        len: 80,
-        1: {
-          cells: {
-            0: { text: '' },
-            2: { text: '' },
-          },
-        },
-        2: {
-          cells: {
-            0: { text: '', style: 0 },
-            1: { text: '' },
-            2: { text: '', merge: [1, 1] },
-          }
-        },
-        8: {
-          cells: {
-            8: { text: '', style: 0 },
-          }
-        }
-      };
+
+
       // x_spreadsheet.locale('zh-cn');
       var xs = x_spreadsheet('#x-spreadsheet-demo', {showToolbar: true, showGrid: true})
         .loadData([{
@@ -65,15 +33,10 @@
               },
             },
           ],
-          merges: [
-            'C3:D4',
-          ],
-          cols: {
-            len: 10,
-            2: { width: 200 },
-          },
+  
+
           rows,
-        }, { name: 'sheet-test', rows: rows10 }]).change((cdata) => {
+        }, ]).change((cdata) => {
           // console.log(cdata);
           console.log('>>>', xs.getData());
         });
