--- a/word.html
+++ b/word.html
@@ -21,6 +21,15 @@
         Recoger todas las bolas sin morir con los pinchos o las bombas que salen al recoger las mismas bolas. 
         Una vez recoges todas las bolas, reaparecen en su lugar y sale una bomba. 
         La finalidad del juego es conseguir la mayor puntuación posible, al ser un juego local deberás mejorar tu anterior puntuación.
+
+        Créditos:
+        Ismael Boufarcha
+        Sheila García
+        Marc Hernández
+
+        Con la colaboración de:
+        Oscar Otero
+        Natalia Fernández
     </p>
 </div>
 
