--- a/word.html
+++ b/word.html
@@ -16,19 +16,25 @@
 <div id="editor">
     <p> 
         ¡Bienvenidos a la página web! En este bloc de notas vais a poder encontrar las normas del juego que debéis que buscar en la página.
-        
-        Juego:
+        <br> <br>
+        <b>Juego:</b> 
+        <br>
         Recoger todas las bolas sin morir con los pinchos o las bombas que salen al recoger las mismas bolas. 
         Una vez recoges todas las bolas, reaparecen en su lugar y sale una bomba. 
         La finalidad del juego es conseguir la mayor puntuación posible, al ser un juego local deberás mejorar tu anterior puntuación.
-
-        Créditos:
+        <br> <br>
+        <b>Créditos:</b>
+        <br>
         Ismael Boufarcha
+        <br>
         Sheila García
+        <br>
         Marc Hernández
-
-        Con la colaboración de:
+        <br> <br>
+        <b>Con la colaboración de:</b>
+        <br> 
         Oscar Otero
+        <br>
         Natalia Fernández
     </p>
 </div>
