--- a/word.html
+++ b/word.html
@@ -36,6 +36,8 @@
         Oscar Otero
         <br>
         Natalia Fernández
+        <br>
+        IES LA SERRA --> 4 de secundaria
     </p>
 </div>
 
